Fixed Higgins references

--- a/bibliography/bibliography-heterogeneity.bib
+++ b/bibliography/bibliography-heterogeneity.bib
@@ -252,7 +252,7 @@
   journaltitle = {BMJ},
   date = {2003},
   pages = {557-560},
-  author = {Higgins, J. P T and Higgins, J. P. T.},
+  author = {Higgins, J. P T},
   file = {C:\\Users\\Anton\\Zotero\\storage\\2X4K23B8\\search.crossref.org.html}
 }
 
