--- a/writing/draft-heterogeneity.rmd
+++ b/writing/draft-heterogeneity.rmd
@@ -75,7 +75,7 @@ Third,  the possibility of heterogeneity can create controversy in the interpret
 
 Fourth, meta-analytic techniques are affected by heterogeneity. Techniques that attempt to correct for publication bias in their estimate tend to fail in the presence of heterogeneity [@@10.2139/ssrn.2659409; @10.1177/1745691616662243], which is problematic considering widespread publication bias [refs] and its impact on meta-analytic estimates. In addition, heterogeneity alters the interpretation of meta-analytic estimates as either _the_ true effect size (under homogeneity) or the average of the true effect sizes (under heterogeneity), though one may question the usefulness of interpreting the average true effect size in the presence of heterogeneity [@Simonsohn2017], just as it may be questionable to interpret an average main effect in the context of an interaction effect [@Aiken1991].
 
-It is a commonly believed that heterogeneity is the norm in psychology.  In support of this notion, recent large scale reviews of meta-analyses in psychology [@Stanley2017; @10.5334/jopd.33a] report median heterogeneity levels that can best be described as 'large' (see next paragraph). In comparison, the median heterogeneity estimate in medicine would be considered 'small' by the same standard [@10.1136/bmj.39343.408449.80]. It may simply be that effects in psychology are more heterogenous than those of medicine. However, meta-analyses in psychology also typically include more studies than those in medicine, and it could be that they tend to include studies from a much broader spectrum than meta-analyses in medicine. The median number of studies (effects) per meta-analysis in the psychology sample of @10.5334/jopd.33a was 12, whereas in the medicine sample of  @10.1136/bmj.39343.408449.80 the median number of studies was only 7, despite exclusion of all meta-analyses of 3 or fewer studies. It is difficult to separate these explanations. To facilitate doing so, in this paper we focus on meta-analyses of only direct replications, which are exempt from the potential problem of including too disparate studies. In reference to meta-analyses of direct replications, several authors [@10.1177/1745691616662243; @Tackett2017] have argued that if we were to expect heterogeneity to be absent or minimal anywhere, it would be in pre-registered multi-lab projects with a common protocol, and that heterogeneity has been reported even under such circumstances [e.g., @10.1027/1864-9335/a000178 is an indication of widespread heterogeneity in psychology. However, even in the case of multi-lab direct replication projects, studies vary on two contextual factors (sample population and settings) and if we believe an effect is sensitive to changes in these two factors we might still expect to find some heterogeneity
+It is a commonly believed that heterogeneity is the norm in psychology.  In support of this notion, recent large scale reviews of meta-analyses in psychology [@Stanley2017; @10.5334/jopd.33] report median heterogeneity levels that can best be described as 'large' (see next paragraph). In comparison, the median heterogeneity estimate in medicine would be considered 'small' by the same standard [@10.1136/bmj.39343.408449.80]. It may simply be that effects in psychology are more heterogenous than those of medicine. However, meta-analyses in psychology also typically include more studies than those in medicine, and it could be that they tend to include studies from a much broader spectrum than meta-analyses in medicine. The median number of studies (effects) per meta-analysis in the psychology sample of @10.5334/jopd.33 was 12, whereas in the medicine sample of  @10.1136/bmj.39343.408449.80 the median number of studies was only 7, despite exclusion of all meta-analyses of 3 or fewer studies. It is difficult to separate these explanations. To facilitate doing so, in this paper we focus on meta-analyses of only direct replications, which are exempt from the potential problem of including too disparate studies. In reference to meta-analyses of direct replications, several authors [@10.1177/1745691616662243; @Tackett2017] have argued that if we were to expect heterogeneity to be absent or minimal anywhere, it would be in pre-registered multi-lab projects with a common protocol, and that heterogeneity has been reported even under such circumstances [e.g., @10.1027/1864-9335/a000178 is an indication of widespread heterogeneity in psychology. However, even in the case of multi-lab direct replication projects, studies vary on two contextual factors (sample population and settings) and if we believe an effect is sensitive to changes in these two factors we might still expect to find some heterogeneity
 
 One problem lies in the assessment of heterogeneity and its inherent uncertainty. Heterogeneity is often measured by the $I^2$ index [@10.1002/sim.1186;  @10.1136/bmj.327.7414.557], which allows comparison of estimates across meta-analyses and has an intuitive interpretation. It can be interpreted as the percentage of variability in effect sizes that is due to heterogeneity amongst the true effects (that is, sensitivity to contextual factors) rather than sampling variance, and ranges from 0-100%. The $I^2$ index is a transformation of the well-known Q-test of heterogeneity in meta-analysis [@10.2307/3001666] by taking $[Q - (k - 1)] / Q \times 100$%, where k is the number of studies included in the meta-analysis and a negative $I^2$ is set to zero. @10.1136/bmj.327.7414.557 tentatively defined $I^2$-values of 25, 50, and 75% as small/medium/large heterogeneity respectively. Tests of heterogeneity typically have low statistical power in many practical situations [@10.1002/sim.2481; @10.1037/1082-989X.11.2.193]. This complicates the discussion of heterogeneity, because while $I^2$ always provides an estimate of heterogeneity, this estimate is often surrounded by wide confidence intervals [@10.1136/bmj.39343.408449.80"]. For example, Ioannidis reports that in a large set of Cochrane meta-analyses, all meta-analyses with $I^2$ point estimates of 0% had upper 95% confidence intervals that exceeded 33%, exceeding what @10.1136/bmj.327.7414.557 defined as 'small' heterogeneity. In addition, under homogeneity $I^2$ has a central chisquare distribution [@10.1186/s12874-015-0024-z], a distribution that is right-skewed with more than 40% of observations falling above the expected value (for all k > 4). In other words, even in the absence of heterogeneity, a meta-analysis of 5 or more studies will have an $I^2$ point estimate above zero in more than 40% of cases. Heterogeneity estimates may thus be congruent with a wide range of true heterogeneity levels. Despite exhortations to the contrary [@10.1136/bmj.39343.408449.80], it remains common to omit confidence intervals in the reporting of $I^2$. In consideration of such uncertainty and the prevalent belief that heterogeneity is the norm in psychology, we examine the existing evidence for heterogeneity in psychology using a sample of pre-registered multi-lab direct replication projects.
 
@@ -140,7 +140,7 @@ All code and data for this project are available on the Open Science Framework (
 
 We downloaded and collated summary data from ten pre-registered multi-lab replication projects in psychology (Table 2). Data from all ten projects were publicly available on the Open Science Framework (osf.io) and downloaded between 2018/02/01 and 2018/03/31. Although some projects (e.g. RRR4) reported results from several outcome variables, we only included primary outcome variables as stated in accompanying publications, resulting in a total of 37 effects. For each effect we extracted (osf.io/3bmvc/) summary data (e.g., means and standard deviations) at the level of the lab as specified by the original authors for their primary analysis (i.e., typically after exclusions). We extracted information on the country of each lab, whether participants were physically in the lab for the study, total number of participants per lab, type of effect size, and additional information related to each effect (see codebook; osf.io/uhq4r/). Extracted data were in a variety of formats: Excel (Many labs 1, RRR1 & RRR2), CSV (Many labs 3, RRR3, RRR4, RRR5, RRR6) and as PDF tables (RRR7, RRR8). In two cases (RRR5 and RRR6) it was necessary to download the raw data to extract summary data. Although a particular lab may have participated in several projects, the lab indicator was typically not the same across projects. Even so, we kept the original lab indicators to facilitate comparing observations in our dataset with the original datasets. Finally, we collated the summary data for all effects into one dataset for analysis (osf.io/456fz/). 
 
-To examine heterogeneity of each of the 37 effects, we computed meta-analytic estimates for all 37 effects in our dataset (Table 3). We ran all analyses as specified by the replication authors (osf.io/kf6pt/). All effects were estimated with random-effects models and the Restricted Maximum Likelihood (REML) estimator using the R-package metafor [@10.18637/jss.v036.i03], though with a variety of outcome variables: correlations, standardized mean differences, raw mean differences, odds ratios and risk differences. ML1 transformed odd ratios into standardized mean differences when meta-analyzing under the assumption that responses followed logistic distributions [@10.1037/1082-989x.8.4.448; @10.18637/jss.v036.i03]. Two projects (RRR5 and RRR7) used the Knapp and Hartung adjustment of the standard errors [@10.1002/sim.1482] and ML3 correlations were corrected for bias [@10.1037//0021-9010.74.3.469; @10.18637/jss.v036.i03]. After estimating effects, ML3 transformed correlations into eta-squared for reporting, which we did not. For each effect we estimated $I^2$ and its 95% confidence interval. Confidence intervals were calculated in metafor which uses the Q-profile method [@10.1186/1471-2288-14-103].
+To examine heterogeneity of each of the 37 effects, we computed meta-analytic estimates for all 37 effects in our dataset (Table 3). We ran all analyses as specified by the replication authors (osf.io/kf6pt/). All effects were estimated with random-effects models and the Restricted Maximum Likelihood (REML) estimator using the R-package metafor [@10.18637/jss.v036.i03], though with a variety of outcome variables: correlations, standardized mean differences, raw mean differences, odds ratios and risk differences. ML1 transformed odd ratios into standardized mean differences when meta-analyzing under the assumption that responses followed logistic distributions [@10.1037/1082-989X.8.4.448; @10.18637/jss.v036.i03]. Two projects (RRR5 and RRR7) used the Knapp and Hartung adjustment of the standard errors [@10.1002/sim.1482] and ML3 correlations were corrected for bias [@10.1037//0021-9010.74.3.469; @10.18637/jss.v036.i03]. After estimating effects, ML3 transformed correlations into eta-squared for reporting, which we did not. For each effect we estimated $I^2$ and its 95% confidence interval. Confidence intervals were calculated in metafor which uses the Q-profile method [@10.1186/1471-2288-14-103].
 
 In order to facilitate interpretation of our results, we estimated type I error and power of the Q-test of heterogeneity for each of the 37 effects under zero/small/medium/large heterogeneity ($I^2$ = 0/25/50/75%  respectively). In addition, we plotted $I^2$-distributions across effects at these four heterogeneity levels and compared them with the distribution of the observed $I^2$ estimates of the 37 effects. To do so we simulated results for each effect given the number of studies, k, and the sample sizes, $N_k$, of those studies (osf.io/gbf4u/). We simulated the distribution of $I^2$ for correlation, standardized mean difference, and mean difference effect size measures. Because the standard error of the observed effect size in case of odds ratios and risk differences is strongly affected by assumptions of the probability of success in both treatment groups, we did not directly simulate the I^2 distribution for these effect size measures. In these cases, we used the information on study sample sizes and treated the effects as mean differences in our simulations. 
 
@@ -259,6 +259,6 @@ Complicating the discussion of heterogeneity is that there amongst the studied e
 
 There are some additional limits to the generalizability of claims based on the data in our study. For one, the included effects are neither a representative nor random sample of effects in psychology and as such do not support making strong claims about average heterogeneity levels in psychology. In respect to this point we look forward to the forthcoming Many Labs 2 project which should provide considerable new data on the prevalence of heterogeneity in psychology. In addition, while both the $I^2$ confidence intervals and distribution of point estimates support a small number of heterogenous effects amongst those studied, most confidence intervals are congruent with anything from low to high heterogeneity as defined by @10.1136/bmj.327.7414.557. As always, absence of evidence is not evidence of absence. Finally, since the included studies only vary on two contextual factors (sample population and settings), the data tell us nothing about the included effects' susceptibility to changes in the other two factors (treatment and measurement variables).
 
-To conclude, evidence does not appear to support the belief that heterogeneity is the norm in psychology. Large-scale reviews of meta-analyses in psychology suggest considerable heterogeneity across the field of psychology [@Stanley2017; @10.5334/jopd.33a]. However, in our experience psychologist tend to include widely varying studies in their meta-analyses, sometimes varying on all four contextual factors (or more). This is perhaps unsurprising considering the lack of theory delineating boundary conditions in psychology [@10.1177/1745691617708630].  Our sample, despite consisting of the arguably best, least biased, meta-analytic data currently available in psychology, was unfortunately relatively small and not representative of the many varied effects studied in psychology. As such we are enthusiastic about the many multi-lab initiatives in psychology (Registered Replication Reports, Many Labs 2, ManyBabies, the Psych Science Accelerator) which in the future will provide considerable new data and enable researchers to re-evaluate the prevalence of heterogeneity in psychology. At current there is little evidence to support the notion that heterogeneity is widespread in psychology. 
+To conclude, evidence does not appear to support the belief that heterogeneity is the norm in psychology. Large-scale reviews of meta-analyses in psychology suggest considerable heterogeneity across the field of psychology [@Stanley2017; @10.5334/jopd.33]. However, in our experience psychologist tend to include widely varying studies in their meta-analyses, sometimes varying on all four contextual factors (or more). This is perhaps unsurprising considering the lack of theory delineating boundary conditions in psychology [@10.1177/1745691617708630].  Our sample, despite consisting of the arguably best, least biased, meta-analytic data currently available in psychology, was unfortunately relatively small and not representative of the many varied effects studied in psychology. As such we are enthusiastic about the many multi-lab initiatives in psychology (Registered Replication Reports, Many Labs 2, ManyBabies, the Psych Science Accelerator) which in the future will provide considerable new data and enable researchers to re-evaluate the prevalence of heterogeneity in psychology. At current there is little evidence to support the notion that heterogeneity is widespread in psychology. 
 
 ##References
