--- a/bibliography/bibliography-heterogeneity.bib
+++ b/bibliography/bibliography-heterogeneity.bib
@@ -1,66 +1,4 @@
 
-@article{10.1177/0956797611417632,
-  title = {False-{{Positive Psychology}}},
-  volume = {22},
-  doi = {10.1177/0956797611417632},
-  number = {11},
-  journaltitle = {Psychological Science},
-  date = {2011},
-  pages = {1359-1366},
-  author = {Simmons, Joseph P. and Nelson, Leif D. and Simonsohn, Uri},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\TFKK7VBQ\\search.crossref.org.html}
-}
-
-@article{10.1017/S0140525X0999152X,
-  langid = {english},
-  title = {The Weirdest People in the World?},
-  volume = {33},
-  issn = {1469-1825},
-  doi = {10.1017/S0140525X0999152X},
-  abstract = {Behavioral scientists routinely publish broad claims about human psychology and behavior in the world's top journals based on samples drawn entirely from Western, Educated, Industrialized, Rich, and Democratic (WEIRD) societies. Researchers - often implicitly - assume that either there is little variation across human populations, or that these "standard subjects" are as representative of the species as any other population. Are these assumptions justified? Here, our review of the comparative database from across the behavioral sciences suggests both that there is substantial variability in experimental results across populations and that WEIRD subjects are particularly unusual compared with the rest of the species - frequent outliers. The domains reviewed include visual perception, fairness, cooperation, spatial reasoning, categorization and inferential induction, moral reasoning, reasoning styles, self-concepts and related motivations, and the heritability of IQ. The findings suggest that members of WEIRD societies, including young children, are among the least representative populations one could find for generalizing about humans. Many of these findings involve domains that are associated with fundamental aspects of psychology, motivation, and behavior - hence, there are no obvious a priori grounds for claiming that a particular behavioral phenomenon is universal based on sampling from a single subpopulation. Overall, these empirical patterns suggests that we need to be less cavalier in addressing questions of human nature on the basis of data drawn from this particularly thin, and rather unusual, slice of humanity. We close by proposing ways to structurally re-organize the behavioral sciences to best tackle these challenges.},
-  number = {2-3},
-  journaltitle = {The Behavioral and Brain Sciences},
-  shortjournal = {Behav Brain Sci},
-  date = {2010-06},
-  pages = {61-83; discussion 83-135},
-  keywords = {Behavioral Sciences,Cognition,Cross-Cultural Comparison,Decision Making,Humans,Morals,Population Groups,Visual Perception},
-  author = {Henrich, Joseph and Heine, Steven J. and Norenzayan, Ara},
-  eprinttype = {pmid},
-  eprint = {20550733}
-}
-
-@article{10.2139/ssrn.2659409,
-  title = {Bias-Correction Techniques Alone Cannot Determine Whether Ego Depletion Is Different from Zero: {{Commentary}} on {{Carter}}, {{Kofler}}, {{Forster}}, \& {{McCullough}}, 2015},
-  doi = {10.2139/ssrn.2659409},
-  shorttitle = {Bias-Correction Techniques Alone Cannot Determine Whether Ego Depletion Is Different from Zero},
-  date = {2015},
-  author = {Inzlicht, Michael and Gervais, Will and Berkman, Elliot}
-}
-
-@incollection{Borenstein2009,
-  location = {{New York}},
-  title = {Effect Sizes for Continuous Data},
-  edition = {2},
-  booktitle = {The Handbook of Research Synthesis and Meta-Analysis},
-  publisher = {{Russel Sage Foundation}},
-  date = {2009},
-  pages = {221--235},
-  author = {Borenstein, Michael},
-  editor = {Cooper, H. and Hedges, L. and Valentine, J.}
-}
-
-@article{10.1037/1082-989X.11.2.193,
-  title = {Assessing Heterogeneity in Meta-Analysis: {{Q}} Statistic or {{I}}\$\^2\$ Index?},
-  volume = {11},
-  doi = {10.1037/1082-989X.11.2.193},
-  shorttitle = {Assessing Heterogeneity in Meta-Analysis},
-  number = {2},
-  journaltitle = {Psychological methods},
-  date = {2006},
-  pages = {193},
-  author = {Huedo-Medina, Tania B. and Sánchez-Meca, Julio and Marín-Martínez, Fulgencio and Botella, Juan}
-}
-
 @article{Stanley2017,
   title = {What {{Meta}}-{{Analyses Reveal}} about the {{Replicability}} of {{Psychological Research}}.},
   volume = {Working Paper},
@@ -72,25 +10,6 @@
   file = {C:\\Users\\Anton\\Zotero\\storage\\UY3YHDSZ\\WhatMeta-AnalysesReveal_WP.pdf}
 }
 
-@article{10.1136/bmj.39343.408449.80,
-  title = {Uncertainty in Heterogeneity Estimates in Meta-Analyses},
-  volume = {335},
-  issn = {0959-8138},
-  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2048840/},
-  doi = {10.1136/bmj.39343.408449.80},
-  abstract = {John Ioannidis, Nikolaos Patsopoulos, and Evangelos Evangelou argue that, although meta-analyses often measure heterogeneity between studies, these estimates can have large uncertainty, which must be taken into account when interpreting evidence},
-  number = {7626},
-  journaltitle = {BMJ : British Medical Journal},
-  shortjournal = {BMJ},
-  urldate = {2018-03-20},
-  date = {2007-11-03},
-  pages = {914-916},
-  author = {Ioannidis, John P A and Patsopoulos, Nikolaos A and Evangelou, Evangelos},
-  eprinttype = {pmid},
-  eprint = {17974687},
-  pmcid = {PMC2048840}
-}
-
 @book{Campbell2015,
   title = {Experimental and Quasi-Experimental Designs for Research},
   publisher = {{Ravenio Books}},
@@ -98,55 +17,11 @@
   author = {Campbell, Donald T. and Stanley, Julian C.}
 }
 
-@article{10.2139/ssrn.2820883,
-  title = {Contextual Sensitivity in Scientific Reproducibility},
-  volume = {113},
-  doi = {10.2139/ssrn.2820883},
-  number = {23},
-  journaltitle = {Proceedings of the National Academy of Sciences},
-  date = {2016},
-  pages = {6454--6459},
-  author = {Van Bavel, Jay J. and Mende-Siedlecki, Peter and Brady, William J. and Reinero, Diego A.},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\UKQZAT4W\\1521897113.html}
-}
-
 @article{Tackett2017,
   title = {Large {{Scale Replication Projects}} in {{Contemporary Psychological Research}}},
   journaltitle = {arXiv preprint arXiv:1710.06031},
   date = {2017},
   author = {Tackett, Jennifer L. and McShane, Blakeley B. and Bockenholt, Ulf and Gelman, Andrew}
-}
-
-@article{10.3389/fpsyg.2015.00621,
-  title = {Replication, Falsification, and the Crisis of Confidence in Social Psychology},
-  volume = {6},
-  doi = {10.3389/fpsyg.2015.00621},
-  journaltitle = {Frontiers in Psychology},
-  date = {2015},
-  author = {Earp, Brian D. and Trafimow, David},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\Q6V7BY89\\search.crossref.org.html}
-}
-
-@article{10.1016/j.jesp.2016.02.003,
-  title = {Charting the Future of Social Psychology on Stormy Seas: {{Winners}}, Losers, and Recommendations},
-  volume = {66},
-  doi = {10.1016/j.jesp.2016.02.003},
-  shorttitle = {Charting the Future of Social Psychology on Stormy Seas},
-  journaltitle = {Journal of Experimental Social Psychology},
-  date = {2016},
-  pages = {153--158},
-  author = {Baumeister, Roy F.}
-}
-
-@article{10.2139/ssrn.2698810,
-  title = {Warmer Hearts, and Warmer, but Noisier Rooms: {{Communality}} Does Elicit Warmth, but Only for Those in Colder Ambient Temperatures—{{Commentary}} on {{Ebersole}} et Al.(2016)},
-  volume = {67},
-  doi = {10.2139/ssrn.2698810},
-  shorttitle = {Warmer Hearts, and Warmer, but Noisier Rooms},
-  journaltitle = {Journal of Experimental Social Psychology},
-  date = {2016},
-  pages = {88--90},
-  author = {IJzerman, Hans and Szymkow, Aleksandra and Parzuchowski, Michal}
 }
 
 @article{10.1177/1745691616674460,
@@ -159,32 +34,6 @@
   pages = {929-930},
   author = {Strack, Fritz},
   file = {C:\\Users\\Anton\\Zotero\\storage\\KVFRYNX8\\search.crossref.org.html}
-}
-
-@article{10.1177/1745691617708630,
-  title = {Constraints on {{Generality}} ({{COG}}): {{A Proposed Addition}} to {{All Empirical Papers}}},
-  volume = {12},
-  doi = {10.1177/1745691617708630},
-  shorttitle = {Constraints on {{Generality}} ({{COG}})},
-  number = {6},
-  journaltitle = {Perspectives on Psychological Science},
-  date = {2017},
-  pages = {1123-1128},
-  author = {Simons, Daniel J. and Shoda, Yuichi and Lindsay, D. Stephen},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\8LXAEM9W\\search.crossref.org.html}
-}
-
-@article{10.1177/1745691616662243,
-  title = {Adjusting for Publication Bias in Meta-Analysis: {{An}} Evaluation of Selection Methods and Some Cautionary Notes},
-  volume = {11},
-  doi = {10.1177/1745691616662243},
-  shorttitle = {Adjusting for Publication Bias in Meta-Analysis},
-  number = {5},
-  journaltitle = {Perspectives on Psychological Science},
-  date = {2016},
-  pages = {730--749},
-  author = {McShane, Blakeley B. and Böckenholt, Ulf and Hansen, Karsten T.},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\YVWSUNLD\\1745691616662243.html}
 }
 
 @online{Simonsohn2017,
@@ -207,91 +56,6 @@
   author = {Aiken, Leona S. and West, Stephen G. and Reno, Raymond R.}
 }
 
-@article{10.5334/jopd.33a,
-  title = {Estimates of {{Between}}-{{Study Heterogeneity}} for 705 {{Meta}}-{{Analyses Reported}}                         in {{{\emph{Psychological Bulletin}}}} {{From}} 1990–2013},
-  volume = {5},
-  doi = {10.5334/jopd.33},
-  number = {1},
-  journaltitle = {Journal of Open Psychology Data},
-  date = {2017},
-  pages = {4},
-  author = {Van Erp, Sara and Erp, Sara Van and Verhagen, Josine and Grasman, Raoul P. P. P. and Wagenmakers, Eric-Jan},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\7TLI4YGW\\search.crossref.org.html}
-}
-
-@article{10.1027/1864-9335/a000178,
-  title = {Investigating Variation in Replicability: {{A}} “Many Labs” Replication Project.},
-  volume = {45},
-  doi = {10.1027/1864-9335/a000178},
-  shorttitle = {Investigating Variation in Replicability},
-  number = {3},
-  journaltitle = {Social psychology},
-  date = {2014},
-  pages = {142},
-  author = {Klein, Richard A. and Ratliff, Kate A. and Vianello, Michelangelo and Adams Jr, Reginald B. and Bahník, Štěpán and Bernstein, Michael J. and Bocian, Konrad and Brandt, Mark J. and Brooks, Beach and Brumbaugh, Claudia Chloe},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\ABS89NYL\\2014-20922-002.html}
-}
-
-@article{10.1002/sim.1186,
-  title = {Quantifying Heterogeneity in a Meta-Analysis},
-  volume = {21},
-  doi = {10.1002/sim.1186},
-  number = {11},
-  journaltitle = {Statistics in Medicine},
-  date = {2002},
-  pages = {1539-1558},
-  author = {Higgins, Julian P. T. and Thompson, Simon G.},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\89IDLSLE\\search.crossref.org.html}
-}
-
-@article{10.1136/bmj.327.7414.557,
-  title = {Measuring Inconsistency in Meta-Analyses},
-  volume = {327},
-  doi = {10.1136/bmj.327.7414.557},
-  number = {7414},
-  journaltitle = {BMJ},
-  date = {2003},
-  pages = {557-560},
-  author = {Higgins, J. P T},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\2X4K23B8\\search.crossref.org.html}
-}
-
-@article{10.2307/3001666,
-  title = {The {{Combination}} of {{Estimates}} from {{Different Experiments}}},
-  volume = {10},
-  doi = {10.2307/3001666},
-  number = {1},
-  journaltitle = {Biometrics},
-  date = {1954},
-  pages = {101},
-  author = {Cochran, William G.},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\JDB9STMG\\search.crossref.org.html}
-}
-
-@article{10.1002/sim.2481,
-  title = {The Power of the Standard Test for the Presence of Heterogeneity in Meta-Analysis},
-  volume = {25},
-  doi = {10.1002/sim.2481},
-  number = {15},
-  journaltitle = {Statistics in Medicine},
-  date = {2006},
-  pages = {2688-2699},
-  author = {Jackson, Dan},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\5CJQSYBZ\\search.crossref.org.html}
-}
-
-@article{10.1186/s12874-015-0024-z,
-  title = {The Heterogeneity Statistic {{I2}} Can Be Biased in Small Meta-Analyses},
-  volume = {15},
-  doi = {10.1186/s12874-015-0024-z},
-  number = {1},
-  journaltitle = {BMC Medical Research Methodology},
-  date = {2015},
-  author = {von Hippel, Paul T and von Hippel, Paul T.},
-  options = {useprefix=true},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\RUPAJKVK\\search.crossref.org.html}
-}
-
  @Manual{RCoreTeam2017,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -301,80 +65,11 @@
     url = {https://www.R-project.org/},
   }
 
-@article{10.18637/jss.v036.i03,
-  title = {Conducting Meta-Analyses in \{\vphantom\}{{R}}\vphantom\{\} with the \{metafor\} Package},
-  volume = {36},
-  url = {http://www.jstatsoft.org/v36/i03/},
-  doi = {10.18637/jss.v036.i03},
-  number = {3},
-  journaltitle = {Journal of Statistical Software},
-  pages = {1--48},
-  author = {Viechtbauer, Wolfgang}
-}
-
-@article{10.1037/1082-989x.8.4.448,
-  title = {Effect-Size Indices for Dichotomized Outcomes in Meta-Analysis.},
-  volume = {8},
-  doi = {10.1037/1082-989x.8.4.448},
-  number = {4},
-  journaltitle = {Psychological methods},
-  date = {2003},
-  pages = {448},
-  author = {Sánchez-Meca, Julio and Marín-Martínez, Fulgencio and Chacón-Moscoso, Salvador}
-}
-
-@article{10.1002/sim.1482,
-  title = {Improved Tests for a Random Effects Meta-Regression with a Single Covariate},
-  volume = {22},
-  doi = {10.1002/sim.1482},
-  number = {17},
-  journaltitle = {Statistics in Medicine},
-  date = {2003},
-  pages = {2693-2710},
-  author = {Knapp, Guido and Hartung, Joachim},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\LZLKG3L6\\search.crossref.org.html}
-}
-
-@article{10.1186/1471-2288-14-103,
-  title = {Methods for Calculating Confidence and Credible Intervals for the Residual Between-Study Variance in Random Effects Meta-Regression Models},
-  volume = {14},
-  doi = {10.1186/1471-2288-14-103},
-  number = {1},
-  journaltitle = {BMC Medical Research Methodology},
-  date = {2014},
-  author = {Jackson, Dan and Turner, Rebecca and Rhodes, Kirsty and Viechtbauer, Wolfgang},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\U3DICTFZ\\search.crossref.org.html}
-}
-
-@article{10.1037//0021-9010.74.3.469,
-  title = {An Unbiased Correction for Sampling Error in Validity Generalization Studies.},
-  volume = {74},
-  doi = {10.1037//0021-9010.74.3.469},
-  number = {3},
-  journaltitle = {Journal of Applied Psychology},
-  date = {1989},
-  pages = {469-477},
-  author = {Hedges, Larry V.},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\KCSAIDSR\\search.crossref.org.html}
-}
-
 @book{Cohen1988,
   title = {Statistical Power Analysis for the Behavioral Sciences. 2nd},
   publisher = {{Hillsdale, NJ: erlbaum}},
   date = {1988},
   author = {Cohen, Jacob}
-}
-
-@article{10.2307/2331838,
-  title = {Frequency {{Distribution}} of the {{Values}} of the {{Correlation Coefficient}} in {{Samples}} from an {{Indefinitely Large Population}}},
-  volume = {10},
-  doi = {10.2307/2331838},
-  number = {4},
-  journaltitle = {Biometrika},
-  date = {1915},
-  pages = {507},
-  author = {Fisher, R. A.},
-  file = {C:\\Users\\Anton\\Zotero\\storage\\BINNMGEC\\search.crossref.org.html}
 }
 
 @article{Fisher1921,
@@ -384,6 +79,387 @@
   date = {1921},
   pages = {3--32},
   author = {Fisher, Ronald A.}
+}
+
+@incollection{Borenstein2009,
+  location = {{New York}},
+  title = {Effect Sizes for Continuous Data},
+  edition = {2},
+  booktitle = {The Handbook of Research Synthesis and Meta-Analysis},
+  publisher = {{Russel Sage Foundation}},
+  date = {2009},
+  pages = {221--235},
+  author = {Borenstein, Michael},
+  editor = {Cooper, H. and Hedges, L. and Valentine, J.}
+}
+
+@article{10.1186/s12874-015-0024-z,
+  langid = {english},
+  title = {The Heterogeneity Statistic {{I2}} Can Be Biased in Small Meta-Analyses},
+  volume = {15},
+  issn = {1471-2288},
+  url = {http://bmcmedresmethodol.biomedcentral.com/articles/10.1186/s12874-015-0024-z},
+  doi = {10.1186/s12874-015-0024-z},
+  number = {1},
+  journaltitle = {BMC Medical Research Methodology},
+  urldate = {2018-06-28},
+  date = {2015-12},
+  author = {von Hippel, Paul T},
+  options = {useprefix=true},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\RUPAJKVK\\search.crossref.org.html}
+}
+
+@article{10.2307/3001666,
+  title = {The {{Combination}} of {{Estimates}} from {{Different Experiments}}},
+  volume = {10},
+  issn = {0006341X},
+  url = {https://www.jstor.org/stable/3001666?origin=crossref},
+  doi = {10.2307/3001666},
+  number = {1},
+  journaltitle = {Biometrics},
+  urldate = {2018-06-28},
+  date = {1954-03},
+  pages = {101},
+  author = {Cochran, William G.},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\JDB9STMG\\search.crossref.org.html}
+}
+
+@article{10.3389/fpsyg.2015.00621,
+  title = {Replication, Falsification, and the Crisis of Confidence in Social Psychology},
+  volume = {6},
+  issn = {1664-1078},
+  url = {http://www.frontiersin.org/Quantitative_Psychology_and_Measurement/10.3389/fpsyg.2015.00621/abstract},
+  doi = {10.3389/fpsyg.2015.00621},
+  journaltitle = {Frontiers in Psychology},
+  urldate = {2018-06-28},
+  date = {2015-05-19},
+  author = {Earp, Brian D. and Trafimow, David},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\Q6V7BY89\\search.crossref.org.html}
+}
+
+@article{10.1017/S0140525X0999152X,
+  langid = {english},
+  title = {The Weirdest People in the World?},
+  volume = {33},
+  issn = {0140-525X, 1469-1825},
+  url = {http://www.journals.cambridge.org/abstract_S0140525X0999152X},
+  doi = {10.1017/S0140525X0999152X},
+  number = {2-3},
+  journaltitle = {Behavioral and Brain Sciences},
+  urldate = {2018-06-28},
+  date = {2010-06},
+  pages = {61-83},
+  keywords = {Humans,Behavioral Sciences,Cognition,Cross-Cultural Comparison,Decision Making,Morals,Population Groups,Visual Perception},
+  author = {Henrich, Joseph and Heine, Steven J. and Norenzayan, Ara}
+}
+
+@article{10.2139/ssrn.2698810,
+  langid = {english},
+  title = {Warmer {{Hearts}}, and {{Warmer}}, but {{Noisier Rooms}}: {{Communality Does Elicit Warmth}}, but {{Only}} for {{Those}} in {{Colder Ambient Temperatures Commentary}} on {{Ebersole}} et Al. (2016)},
+  issn = {1556-5068},
+  url = {https://www.ssrn.com/abstract=2698810},
+  doi = {10.2139/ssrn.2698810},
+  shorttitle = {Warmer {{Hearts}}, and {{Warmer}}, but {{Noisier Rooms}}},
+  journaltitle = {SSRN Electronic Journal},
+  urldate = {2018-06-28},
+  date = {2015},
+  author = {IJzerman, Hans and Szymkow, Aleksandra and Parzuchowski, Michal}
+}
+
+@article{10.2139/ssrn.2659409,
+  langid = {english},
+  title = {News of {{Ego Depletion}}'s {{Demise}} Is {{Premature}}: {{Commentary}} on {{Carter}}, {{Kofler}}, {{Forster}}, \& {{Mccullough}}, 2015},
+  issn = {1556-5068},
+  url = {http://www.ssrn.com/abstract=2659409},
+  doi = {10.2139/ssrn.2659409},
+  shorttitle = {News of {{Ego Depletion}}'s {{Demise}} Is {{Premature}}},
+  journaltitle = {SSRN Electronic Journal},
+  urldate = {2018-06-28},
+  date = {2015},
+  author = {Inzlicht, Michael and Gervais, Will and Berkman, Elliot}
+}
+
+@article{10.1136/bmj.39343.408449.80,
+  langid = {english},
+  title = {Uncertainty in Heterogeneity Estimates in Meta-Analyses},
+  volume = {335},
+  issn = {0959-8138, 1468-5833},
+  url = {http://www.bmj.com/lookup/doi/10.1136/bmj.39343.408449.80},
+  doi = {10.1136/bmj.39343.408449.80},
+  number = {7626},
+  journaltitle = {BMJ},
+  urldate = {2018-06-28},
+  date = {2007-11-03},
+  pages = {914-916},
+  author = {Ioannidis, John P A and Patsopoulos, Nikolaos A and Evangelou, Evangelos}
+}
+
+@article{10.1002/sim.2481,
+  langid = {english},
+  title = {The Power of the Standard Test for the Presence of Heterogeneity in Meta-Analysis},
+  volume = {25},
+  issn = {0277-6715, 1097-0258},
+  url = {http://doi.wiley.com/10.1002/sim.2481},
+  doi = {10.1002/sim.2481},
+  number = {15},
+  journaltitle = {Statistics in Medicine},
+  urldate = {2018-06-28},
+  date = {2006-08-15},
+  pages = {2688-2699},
+  author = {Jackson, Dan},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\5CJQSYBZ\\search.crossref.org.html}
+}
+
+@article{10.1002/sim.1186,
+  langid = {english},
+  title = {Quantifying Heterogeneity in a Meta-Analysis},
+  volume = {21},
+  issn = {0277-6715, 1097-0258},
+  url = {http://doi.wiley.com/10.1002/sim.1186},
+  doi = {10.1002/sim.1186},
+  number = {11},
+  journaltitle = {Statistics in Medicine},
+  urldate = {2018-06-28},
+  date = {2002-06-15},
+  pages = {1539-1558},
+  author = {Higgins, Julian P. T. and Thompson, Simon G.},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\89IDLSLE\\search.crossref.org.html}
+}
+
+@article{10.1186/1471-2288-14-103,
+  langid = {english},
+  title = {Methods for Calculating Confidence and Credible Intervals for the Residual Between-Study Variance in Random Effects Meta-Regression Models},
+  volume = {14},
+  issn = {1471-2288},
+  url = {http://bmcmedresmethodol.biomedcentral.com/articles/10.1186/1471-2288-14-103},
+  doi = {10.1186/1471-2288-14-103},
+  number = {1},
+  journaltitle = {BMC Medical Research Methodology},
+  urldate = {2018-06-28},
+  date = {2014-12},
+  author = {Jackson, Dan and Turner, Rebecca and Rhodes, Kirsty and Viechtbauer, Wolfgang},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\U3DICTFZ\\search.crossref.org.html}
+}
+
+@article{10.1136/bmj.327.7414.557,
+  langid = {english},
+  title = {Measuring Inconsistency in Meta-Analyses},
+  volume = {327},
+  issn = {0959-8138, 1468-5833},
+  url = {http://www.bmj.com/cgi/doi/10.1136/bmj.327.7414.557},
+  doi = {10.1136/bmj.327.7414.557},
+  number = {7414},
+  journaltitle = {BMJ},
+  urldate = {2018-06-28},
+  date = {2003-09-06},
+  pages = {557-560},
+  author = {Higgins, J. P T},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\2X4K23B8\\search.crossref.org.html}
+}
+
+@article{10.1027/1864-9335/a000178,
+  langid = {english},
+  title = {Investigating {{Variation}} in {{Replicability}}: {{A}} “{{Many Labs}}” {{Replication Project}}},
+  volume = {45},
+  issn = {1864-9335, 2151-2590},
+  url = {http://econtent.hogrefe.com/doi/abs/10.1027/1864-9335/a000178},
+  doi = {10.1027/1864-9335/a000178},
+  shorttitle = {Investigating {{Variation}} in {{Replicability}}},
+  number = {3},
+  journaltitle = {Social Psychology},
+  urldate = {2018-06-28},
+  date = {2014-05},
+  pages = {142-152},
+  author = {Klein, Richard A. and Ratliff, Kate A. and Vianello, Michelangelo and Adams, Reginald B. and Bahník, Štěpán and Bernstein, Michael J. and Bocian, Konrad and Brandt, Mark J. and Brooks, Beach and Brumbaugh, Claudia Chloe and Cemalcilar, Zeynep and Chandler, Jesse and Cheong, Winnee and Davis, William E. and Devos, Thierry and Eisner, Matthew and Frankowska, Natalia and Furrow, David and Galliani, Elisa Maria and Hasselman, Fred and Hicks, Joshua A. and Hovermale, James F. and Hunt, S. Jane and Huntsinger, Jeffrey R. and IJzerman, Hans and John, Melissa-Sue and Joy-Gaba, Jennifer A. and Barry Kappes, Heather and Krueger, Lacy E. and Kurtz, Jaime and Levitan, Carmel A. and Mallett, Robyn K. and Morris, Wendy L. and Nelson, Anthony J. and Nier, Jason A. and Packard, Grant and Pilati, Ronaldo and Rutchick, Abraham M. and Schmidt, Kathleen and Skorinko, Jeanine L. and Smith, Robert and Steiner, Troy G. and Storbeck, Justin and Van Swol, Lyn M. and Thompson, Donna and van ‘t Veer, A. E. and Ann Vaughn, Leigh and Vranka, Marek and Wichman, Aaron L. and Woodzicka, Julie A. and Nosek, Brian A.},
+  options = {useprefix=true},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\ABS89NYL\\2014-20922-002.html}
+}
+
+@article{10.1002/sim.1482,
+  langid = {english},
+  title = {Improved Tests for a Random Effects Meta-Regression with a Single Covariate},
+  volume = {22},
+  issn = {0277-6715, 1097-0258},
+  url = {http://doi.wiley.com/10.1002/sim.1482},
+  doi = {10.1002/sim.1482},
+  number = {17},
+  journaltitle = {Statistics in Medicine},
+  urldate = {2018-06-28},
+  date = {2003-09-15},
+  pages = {2693-2710},
+  author = {Knapp, Guido and Hartung, Joachim},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\LZLKG3L6\\search.crossref.org.html}
+}
+
+@article{10.2307/2331838,
+  title = {Frequency {{Distribution}} of the {{Values}} of the {{Correlation Coefficient}} in {{Samples}} from an {{Indefinitely Large Population}}},
+  volume = {10},
+  issn = {00063444},
+  url = {https://www.jstor.org/stable/2331838?origin=crossref},
+  doi = {10.2307/2331838},
+  number = {4},
+  journaltitle = {Biometrika},
+  urldate = {2018-06-28},
+  date = {1915-05},
+  pages = {507},
+  author = {Fisher, R. A.},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\BINNMGEC\\search.crossref.org.html}
+}
+
+@article{10.1177/0956797611417632,
+  langid = {english},
+  title = {False-{{Positive Psychology}}: {{Undisclosed Flexibility}} in {{Data Collection}} and {{Analysis Allows Presenting Anything}} as {{Significant}}},
+  volume = {22},
+  issn = {0956-7976, 1467-9280},
+  url = {http://journals.sagepub.com/doi/10.1177/0956797611417632},
+  doi = {10.1177/0956797611417632},
+  shorttitle = {False-{{Positive Psychology}}},
+  number = {11},
+  journaltitle = {Psychological Science},
+  urldate = {2018-06-28},
+  date = {2011-11},
+  pages = {1359-1366},
+  author = {Simmons, Joseph P. and Nelson, Leif D. and Simonsohn, Uri},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\TFKK7VBQ\\search.crossref.org.html}
+}
+
+@article{10.5334/jopd.33,
+  title = {Estimates of {{Between}}-{{Study Heterogeneity}} for 705 {{Meta}}-{{Analyses Reported}} in {{{\emph{Psychological Bulletin}}}} {{From}} 1990–2013},
+  volume = {5},
+  issn = {2050-9863},
+  url = {https://openpsychologydata.metajnl.com/article/10.5334/jopd.33/},
+  doi = {10.5334/jopd.33},
+  number = {1},
+  journaltitle = {Journal of Open Psychology Data},
+  urldate = {2018-06-28},
+  date = {2017-08-17},
+  pages = {4},
+  keywords = {Bayesian inference,heterogeneity,informed prior distribution,meta-analysis},
+  author = {Van Erp, Sara and Verhagen, Josine and Grasman, Raoul P. P. P. and Wagenmakers, Eric-Jan},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\7TLI4YGW\\search.crossref.org.html;C:\\Users\\Anton\\Zotero\\storage\\AS2B95IM\\jopd.html}
+}
+
+@article{10.1037/1082-989X.8.4.448,
+  langid = {english},
+  title = {Effect-{{Size Indices}} for {{Dichotomized Outcomes}} in {{Meta}}-{{Analysis}}.},
+  volume = {8},
+  issn = {1939-1463, 1082-989X},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/1082-989X.8.4.448},
+  doi = {10.1037/1082-989X.8.4.448},
+  number = {4},
+  journaltitle = {Psychological Methods},
+  urldate = {2018-06-28},
+  date = {2003},
+  pages = {448-467},
+  author = {Sánchez-Meca, Julio and Marín-Martínez, Fulgencio and Chacón-Moscoso, Salvador}
+}
+
+@article{10.2139/ssrn.2820883,
+  langid = {english},
+  title = {Contextual {{Sensitivity Helps Explain}} the {{Reproducibility Gap}} between {{Social}} and {{Cognitive Psychology}}},
+  issn = {1556-5068},
+  url = {http://www.ssrn.com/abstract=2820883},
+  doi = {10.2139/ssrn.2820883},
+  journaltitle = {SSRN Electronic Journal},
+  urldate = {2018-06-28},
+  date = {2016},
+  author = {Van Bavel, Jay J},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\UKQZAT4W\\1521897113.html}
+}
+
+@article{10.1177/1745691617708630,
+  langid = {english},
+  title = {Constraints on {{Generality}} ({{COG}}): {{A Proposed Addition}} to {{All Empirical Papers}}},
+  volume = {12},
+  issn = {1745-6916, 1745-6924},
+  url = {http://journals.sagepub.com/doi/10.1177/1745691617708630},
+  doi = {10.1177/1745691617708630},
+  shorttitle = {Constraints on {{Generality}} ({{COG}})},
+  number = {6},
+  journaltitle = {Perspectives on Psychological Science},
+  urldate = {2018-06-28},
+  date = {2017-11},
+  pages = {1123-1128},
+  author = {Simons, Daniel J. and Shoda, Yuichi and Lindsay, D. Stephen},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\8LXAEM9W\\search.crossref.org.html}
+}
+
+@article{10.18637/jss.v036.i03,
+  langid = {english},
+  title = {Conducting {{Meta}}-{{Analyses}} in {{{\emph{R}}}} with the {\textbf{Metafor}} {{Package}}},
+  volume = {36},
+  issn = {1548-7660},
+  url = {http://www.jstatsoft.org/v36/i03/},
+  doi = {10.18637/jss.v036.i03},
+  number = {3},
+  journaltitle = {Journal of Statistical Software},
+  urldate = {2018-06-28},
+  date = {2010},
+  author = {Viechtbauer, Wolfgang}
+}
+
+@article{10.1016/j.jesp.2016.02.003,
+  langid = {english},
+  title = {Charting the Future of Social Psychology on Stormy Seas: {{Winners}}, Losers, and Recommendations},
+  volume = {66},
+  issn = {00221031},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S002210311600007X},
+  doi = {10.1016/j.jesp.2016.02.003},
+  shorttitle = {Charting the Future of Social Psychology on Stormy Seas},
+  journaltitle = {Journal of Experimental Social Psychology},
+  urldate = {2018-06-28},
+  date = {2016-09},
+  pages = {153-158},
+  author = {Baumeister, Roy F.}
+}
+
+@article{10.1037/1082-989X.11.2.193,
+  langid = {english},
+  title = {Assessing Heterogeneity in Meta-Analysis: {{Q}} Statistic or {{I}}² Index?},
+  volume = {11},
+  issn = {1939-1463, 1082-989X},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/1082-989X.11.2.193},
+  doi = {10.1037/1082-989X.11.2.193},
+  shorttitle = {Assessing Heterogeneity in Meta-Analysis},
+  number = {2},
+  journaltitle = {Psychological Methods},
+  urldate = {2018-06-28},
+  date = {2006},
+  pages = {193-206},
+  author = {Huedo-Medina, Tania B. and Sánchez-Meca, Julio and Marín-Martínez, Fulgencio and Botella, Juan}
+}
+
+@article{10.1037//0021-9010.74.3.469,
+  langid = {english},
+  title = {An Unbiased Correction for Sampling Error in Validity Generalization Studies.},
+  volume = {74},
+  issn = {0021-9010},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0021-9010.74.3.469},
+  doi = {10.1037//0021-9010.74.3.469},
+  number = {3},
+  journaltitle = {Journal of Applied Psychology},
+  urldate = {2018-06-28},
+  date = {1989},
+  pages = {469-477},
+  author = {Hedges, Larry V.},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\KCSAIDSR\\search.crossref.org.html}
+}
+
+@article{10.1177/1745691616662243,
+  langid = {english},
+  title = {Adjusting for {{Publication Bias}} in {{Meta}}-{{Analysis}}: {{An Evaluation}} of {{Selection Methods}} and {{Some Cautionary Notes}}},
+  volume = {11},
+  issn = {1745-6916, 1745-6924},
+  url = {http://journals.sagepub.com/doi/10.1177/1745691616662243},
+  doi = {10.1177/1745691616662243},
+  shorttitle = {Adjusting for {{Publication Bias}} in {{Meta}}-{{Analysis}}},
+  number = {5},
+  journaltitle = {Perspectives on Psychological Science},
+  urldate = {2018-06-28},
+  date = {2016-09},
+  pages = {730-749},
+  author = {McShane, Blakeley B. and Böckenholt, Ulf and Hansen, Karsten T.},
+  file = {C:\\Users\\Anton\\Zotero\\storage\\YVWSUNLD\\1745691616662243.html}
 }
 
 
