References to Hunter & Schmidt added

--- a/bibliography/bibliography-heterogeneity.bib
+++ b/bibliography/bibliography-heterogeneity.bib
@@ -462,4 +462,120 @@
   file = {C:\\Users\\Anton\\Zotero\\storage\\YVWSUNLD\\1745691616662243.html}
 }
 
+@article{10.3389/fpsyg.2017.00879,
+  title = {Reproducibility in {{Psychological Science}}: {{When Do Psychological Phenomena Exist}}?},
+  volume = {8},
+  issn = {1664-1078},
+  url = {http://journal.frontiersin.org/article/10.3389/fpsyg.2017.00879/full},
+  doi = {10.3389/fpsyg.2017.00879},
+  shorttitle = {Reproducibility in {{Psychological Science}}},
+  journaltitle = {Frontiers in Psychology},
+  urldate = {2018-06-29},
+  date = {2017-06-02},
+  author = {Iso-Ahola, Seppo E.}
+}
 
+@article{10.1186/s40359-016-0134-3,
+  langid = {english},
+  title = {Replication Initiatives Will Not Salvage the Trustworthiness of Psychology},
+  volume = {4},
+  issn = {2050-7283},
+  url = {http://bmcpsychology.biomedcentral.com/articles/10.1186/s40359-016-0134-3},
+  doi = {10.1186/s40359-016-0134-3},
+  number = {1},
+  journaltitle = {BMC Psychology},
+  urldate = {2018-06-29},
+  date = {2016-12},
+  keywords = {Reproducibility,Randomized controlled trials,p-hacking,Publication bias},
+  author = {Coyne, James C.}
+}
+
+@article{10.1017/S0140525X17001972,
+  langid = {english},
+  title = {{{MAKING REPLICATION MAINSTREAM}}},
+  issn = {0140-525X, 1469-1825},
+  url = {https://www.cambridge.org/core/product/identifier/S0140525X17001972/type/journal_article},
+  doi = {10.1017/S0140525X17001972},
+  journaltitle = {Behavioral and Brain Sciences},
+  urldate = {2018-07-01},
+  date = {2017-10-25},
+  pages = {1-50},
+  keywords = {Psychological Research,Replication,Reproducibility,Research Programs},
+  author = {Zwaan, Rolf A. and Etz, Alexander and Lucas, Richard E. and Donnellan, M. Brent}
+}
+
+@article{10.1037/met0000025,
+  langid = {english},
+  title = {Meta-Analysis Using Effect Size Distributions of Only Statistically Significant Studies.},
+  volume = {20},
+  issn = {1939-1463, 1082-989X},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/met0000025},
+  doi = {10.1037/met0000025},
+  number = {3},
+  journaltitle = {Psychological Methods},
+  urldate = {2018-07-01},
+  date = {2015},
+  pages = {293-309},
+  author = {van Assen, Marcel A. L. M. and van Aert, Robbie C. M. and Wicherts, Jelte M.},
+  options = {useprefix=true}
+}
+
+@article{10.1177/1745691616650874,
+  langid = {english},
+  title = {Conducting {{Meta}}-{{Analyses Based}} on {\emph{p}} {{Values}}: {{Reservations}} and {{Recommendations}} for {{Applying}} {\emph{p}} -{{Uniform}} and {\emph{p}} -{{Curve}}},
+  volume = {11},
+  issn = {1745-6916, 1745-6924},
+  url = {http://journals.sagepub.com/doi/10.1177/1745691616650874},
+  doi = {10.1177/1745691616650874},
+  shorttitle = {Conducting {{Meta}}-{{Analyses Based}} on {\emph{p}} {{Values}}},
+  number = {5},
+  journaltitle = {Perspectives on Psychological Science},
+  urldate = {2018-07-01},
+  date = {2016-09},
+  pages = {713-729},
+  author = {van Aert, Robbie C. M. and Wicherts, Jelte M. and van Assen, Marcel A. L. M.},
+  options = {useprefix=true}
+}
+
+@article{10.1007/s11192-011-0494-7,
+  langid = {english},
+  title = {Negative Results Are Disappearing from Most Disciplines and Countries},
+  volume = {90},
+  issn = {0138-9130, 1588-2861},
+  url = {http://link.springer.com/10.1007/s11192-011-0494-7},
+  doi = {10.1007/s11192-011-0494-7},
+  number = {3},
+  journaltitle = {Scientometrics},
+  urldate = {2018-07-01},
+  date = {2012-03},
+  pages = {891-904},
+  author = {Fanelli, Daniele}
+}
+
+@article{10.1186/1471-2288-11-160,
+  langid = {english},
+  title = {Characteristics of Meta-Analyses and Their Component Studies in the {{Cochrane Database}} of {{Systematic Reviews}}: A Cross-Sectional, Descriptive Analysis},
+  volume = {11},
+  issn = {1471-2288},
+  url = {http://bmcmedresmethodol.biomedcentral.com/articles/10.1186/1471-2288-11-160},
+  doi = {10.1186/1471-2288-11-160},
+  shorttitle = {Characteristics of Meta-Analyses and Their Component Studies in the {{Cochrane Database}} of {{Systematic Reviews}}},
+  number = {1},
+  journaltitle = {BMC Medical Research Methodology},
+  urldate = {2018-07-01},
+  date = {2011-12},
+  author = {Davey, Jonathan and Turner, Rebecca M and Clarke, Mike J and Higgins, Julian PT}
+}
+
+@book{Schmidt2015,
+  location = {{1 Oliver's Yard,~55 City Road~London~EC1Y 1SP}},
+  title = {Methods of {{Meta}}-{{Analysis}}: {{Correcting Error}} and {{Bias}} in {{Research Findings}}},
+  isbn = {978-1-4522-8689-1 978-1-4833-9810-5},
+  url = {http://methods.sagepub.com/book/methods-of-meta-analysis-3e},
+  shorttitle = {Methods of {{Meta}}-{{Analysis}}},
+  publisher = {{SAGE Publications, Ltd}},
+  urldate = {2018-07-01},
+  date = {2015},
+  author = {Schmidt, Frank L. and Hunter, John E.},
+  doi = {10.4135/9781483398105}
+}
